added lib extension selecting

--- a/source/detector/CMakeLists.txt
+++ b/source/detector/CMakeLists.txt
@@ -18,8 +18,14 @@ set_target_properties(detector PROPERTIES RUNTIME_OUTPUT_DIRECTORY 	    ${DETECT
 set_target_properties(detector PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG    ${DETECTOR_BINARY_DIR})
 set_target_properties(detector PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE  ${DETECTOR_BINARY_DIR})
 
+if (WIN32)
+  set(OPENCV_WORLD_LIB "opencv_world450.dll")
+else()
+  set(OPENCV_WORLD_LIB "opencv_world450.so")
+endif()
+
 add_custom_target(copy_dll
-  COMMAND ${CMAKE_COMMAND} -E copy ${OPENCV_BIN_INSTALL_PATH}opencv_world450.dll ${DETECTOR_BINARY_DIR}
+  COMMAND ${CMAKE_COMMAND} -E copy ${OPENCV_BIN_INSTALL_PATH}${OPENCV_WORLD_LIB} ${DETECTOR_BINARY_DIR}
 )
 add_dependencies(detector copy_dll)
 
