--- a/source/detector/CMakeLists.txt
+++ b/source/detector/CMakeLists.txt
@@ -1,6 +1,3 @@
-include_directories(${OPENCV_INCLUDE_INSTALL_PATH})
-link_directories(${OPENCV_LIB_INSTALL_PATH})
-
 include_directories(include/)
 add_executable(detector
 	src/FaceBlurrer.cpp
@@ -8,7 +5,7 @@ add_executable(detector
 	src/JsonWriter.cpp
 )
 
-target_link_libraries(detector opencv_world450)
+target_link_libraries(detector ${OpenCV_LIBS})
 target_link_libraries(detector Boost::boost)
 target_link_libraries(detector Boost::filesystem)
 target_link_libraries(detector Boost::regex)
@@ -18,14 +15,8 @@ set_target_properties(detector PROPERTIES RUNTIME_OUTPUT_DIRECTORY 	    ${DETECT
 set_target_properties(detector PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG    ${DETECTOR_BINARY_DIR})
 set_target_properties(detector PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE  ${DETECTOR_BINARY_DIR})
 
-if (WIN32)
-  set(OPENCV_WORLD_LIB "opencv_world450.dll")
-else()
-  set(OPENCV_WORLD_LIB "opencv_world450.so")
-endif()
-
-add_custom_target(copy_dll
-  COMMAND ${CMAKE_COMMAND} -E copy ${OPENCV_BIN_INSTALL_PATH}${OPENCV_WORLD_LIB} ${DETECTOR_BINARY_DIR}
+add_custom_command(
+    TARGET detector POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy ${OPENCV_WORLD_INSTALL_PATH} ${DETECTOR_BINARY_DIR}
+    COMMENT "Copying ${OPENCV_WORLD_INSTALL_PATH} to detector directory"
 )
-add_dependencies(detector copy_dll)
-
