--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,25 +11,30 @@ if(NOT OpenCV_FOUND)
 	set(BUILD_opencv_world 	 		ON)
 	set(WITH_FFMPEG 	 		FALSE)
 	set(OpenCV_BINARY_DIR       		${CMAKE_INSTALL_PREFIX}/opencv/build/)
+	set(OPENCV_BIN_INSTALL_PATH       	${OpenCV_BINARY_DIR}bin/)
 	set(OPENCV_INCLUDE_INSTALL_PATH       	${OpenCV_BINARY_DIR}include/)
 	set(OPENCV_LIB_INSTALL_PATH       	${OpenCV_BINARY_DIR}lib/)
 	if (WIN32)
-  		set(OPENCV_WORLD_INSTALL_PATH   "${OpenCV_BINARY_DIR}bin/${OPENCV_WORLD}450.dll")
+  		set(OPENCV_WORLD_INSTALL_PATH   "${OPENCV_BIN_INSTALL_PATH}opencv_world450.dll")
 	else()
-  		set(OPENCV_WORLD_INSTALL_PATH 	"${OpenCV_BINARY_DIR}bin/${OPENCV_WORLD}.so")
+  		set(OPENCV_WORLD_INSTALL_PATH 	"${OPENCV_LIB_INSTALL_PATH}libopencv_world.so")
 	endif()
 
 	add_subdirectory(opencv-4.5.0)
-
 	include_directories(${OPENCV_INCLUDE_INSTALL_PATH})
 	link_directories(${OPENCV_LIB_INSTALL_PATH})
 else()
 	include_directories(${OpenCV_INCLUDE_DIRS})
-	
 	get_target_property(OPENCV_WORLD_INSTALL_PATH opencv_world LOCATION_RELEASE)
 endif()
 
-add_subdirectory(boost-1.67.0)
+find_package(Boost CONFIG COMPONENTS filesystem regex program_options)
+if(NOT Boost_FOUND)
+	message(STATUS "Boost wasn't found. Installation of boost-1.67.0 started...")	
+	add_subdirectory(boost-1.67.0)
+else()
+	include_directories(${Boost_INCLUDE_DIRS})
+endif()
 
 set(DETECTOR_BINARY_DIR 			${CMAKE_BINARY_DIR}/../detector/)
 add_subdirectory(detector_lib)
