--- a/source/detector_lib/CMakeLists.txt
+++ b/source/detector_lib/CMakeLists.txt
@@ -2,12 +2,7 @@ include_directories(include/)
 add_library(detector_lib SHARED src/FaceDetector.cpp)
 
 if(NOT OpenCV_FOUND)
-	add_custom_command(
-    		TARGET detector_lib PRE_BUILD
-		COMMAND cmake --build ${CMAKE_BINARY_DIR}/source/opencv-4.5.0/ --config Release
-    		COMMAND cmake --install ${CMAKE_BINARY_DIR}/source/opencv-4.5.0/ --config Release
-    		COMMENT "Building and installing OpenCV-4.5.0..."
-	)
+	add_dependencies(detector_lib OpenCV_install)
 endif()
 
 target_link_libraries(detector_lib opencv_world)
