added support for prebuilded boost

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -33,7 +33,8 @@ else()
 	get_target_property(OPENCV_WORLD_INSTALL_PATH opencv_world LOCATION_RELEASE)
 endif()
 
-find_package(Boost CONFIG COMPONENTS filesystem regex program_options)
+set(Boost_USE_STATIC_LIBS 			ON)
+find_package(Boost COMPONENTS filesystem regex program_options)
 if(NOT Boost_FOUND)
 	message(STATUS "Boost wasn't found. Installation of boost-1.67.0 started...")	
 	add_subdirectory(boost-1.67.0)
