--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,7 +3,7 @@ add_custom_target(OpenCV_install
     	COMMAND cmake --install ${CMAKE_BINARY_DIR}/source/opencv-4.5.0/ --config Release
 )
 
-find_package(OpenCV)
+find_package(OpenCV COMPONENTS opencv_world)
 if(NOT OpenCV_FOUND)
 	message(STATUS "OpenCV wasn't found. Installation of OpenCV-4.5.0 started...")
 
